--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,3 +2,4 @@
 @import './utils/variables.scss';
 @import './utils/media.scss';
 @import './utils/fonts.scss';
+@import '/node_modules/antd/dist/antd.css';
